[package]
name = "harvester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
tokio = { version = "1.10.0", features = [
  "fs",
  "macros",
  "rt",
  "rt-multi-thread",
  "signal",
  "test-util",
] }
futures = "0.3.16"
url = "2.2.2"
reqwest = "0.11.4"
serde_json = "1.0.66"
serde = { version = "1.0.128", features = ["derive"] }
async-trait = "0.1.58"
regex = "1.5.4"
flate2 = "1.0.24"
async-compression = { version = "0.3.14", features = [
  "gzip",
  "bzip2",
  "tokio",
] }
bytes = "1.2.1"
log = "0.4.17"
env_logger = "0.9.1"
clap = { version = "4.0.13", features = ["derive"] }
colored = "2.0.0"
tokio-tar = "0.3.0"
