[package]
name = "harvester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
tokio = { version = "1.10.0", features = [
  "fs",
  "macros",
  "rt",
  "rt-multi-thread",
  "signal",
  "test-util",
] }
futures = "0.3.25"
url = "2.3.0"
reqwest = "0.11.13"
serde_json = "1.0.91"
serde = { version = "1.0.128", features = ["derive"] }
async-trait = "0.1.58"
regex = "1.7.0"
flate2 = "1.0.24"
async-compression = { version = "0.3.15", features = [
  "gzip",
  "bzip2",
  "tokio",
] }
bytes = "1.2.1"
log = "0.4.17"
env_logger = "0.10.0"
clap = { version = "4.0.22", features = ["derive"] }
colored = "2.0.0"
tokio-tar = "0.3.0"
